// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components-pro/transfer/demo/basic.md correctly 1`] = `
<div>
  <span
    class="c7n-pro-transfer-wrapper"
  >
    <div
      class="c7n-pro-transfer c7n-pro-transfer-with-header"
      titles="Source,Target"
    >
      <div
        class="c7n-pro-transfer-header"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            type="checkbox"
            value="true"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            <span
              class="c7n-pro-transfer-header-selected"
            >
              3项
            </span>
          </span>
        </label>
        <span
          class="c7n-pro-transfer-header-title"
        >
          Source
        </span>
      </div>
      <div
        class="c7n-pro-transfer-body"
      >
        <div
          class="c7n-pro-transfer-content-wrapper"
        >
          <ul
            class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
            role="menu"
            tabindex="0"
          >
            <li
              aria-disabled="false"
              aria-selected="false"
              class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Jack
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="c7n-pro-transfer-content-item"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Lucy
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
            <li
              aria-disabled="false"
              aria-selected="false"
              class="c7n-pro-transfer-content-item"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Wu
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c7n-pro-transfer-operation"
    >
      <button
        class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
      </button>
      <button
        class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
      </button>
    </div>
    <div
      class="c7n-pro-transfer c7n-pro-transfer-with-header"
      titles="Source,Target"
    >
      <div
        class="c7n-pro-transfer-header"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            type="checkbox"
            value="true"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            <span
              class="c7n-pro-transfer-header-selected"
            >
              0项
            </span>
          </span>
        </label>
        <span
          class="c7n-pro-transfer-header-title"
        >
          Target
        </span>
      </div>
      <div
        class="c7n-pro-transfer-body"
      >
        <div
          class="c7n-pro-transfer-content-wrapper"
        >
          <ul
            class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
            role="menu"
            tabindex="0"
          >
            <li
              aria-disabled="true"
              aria-selected="false"
              class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox c7n-checkbox-disabled"
                >
                  <input
                    class="c7n-checkbox-input"
                    disabled=""
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              无匹配结果。
            </li>
          </ul>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`renders ./components-pro/transfer/demo/controlled.md correctly 1`] = `
<span
  class="c7n-pro-transfer-wrapper"
>
  <div
    class="c7n-pro-transfer c7n-pro-transfer-with-header"
  >
    <div
      class="c7n-pro-transfer-header"
    >
      <label
        class="c7n-pro-checkbox-wrapper"
      >
        <input
          class="c7n-pro-checkbox"
          type="checkbox"
          value="true"
        />
        <i
          class="c7n-pro-checkbox-inner"
        />
        <span
          class="c7n-pro-checkbox-label"
        >
          <span
            class="c7n-pro-transfer-header-selected"
          >
            2项
          </span>
        </span>
      </label>
    </div>
    <div
      class="c7n-pro-transfer-body"
    >
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
          tabindex="0"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Jack
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Lucy
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c7n-pro-transfer-operation"
  >
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
      disabled=""
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
    </button>
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
      disabled=""
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
    </button>
  </div>
  <div
    class="c7n-pro-transfer c7n-pro-transfer-with-header"
  >
    <div
      class="c7n-pro-transfer-header"
    >
      <label
        class="c7n-pro-checkbox-wrapper"
      >
        <input
          class="c7n-pro-checkbox"
          type="checkbox"
          value="true"
        />
        <i
          class="c7n-pro-checkbox-inner"
        />
        <span
          class="c7n-pro-checkbox-label"
        >
          <span
            class="c7n-pro-transfer-header-selected"
          >
            1项
          </span>
        </span>
      </label>
    </div>
    <div
      class="c7n-pro-transfer-body"
    >
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
          tabindex="0"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Wu
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`renders ./components-pro/transfer/demo/dataset.md correctly 1`] = `
<div>
  <span
    class="c7n-pro-transfer-wrapper"
  >
    <div
      class="c7n-pro-transfer c7n-pro-transfer-with-header"
    >
      <div
        class="c7n-pro-transfer-header"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            type="checkbox"
            value="true"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            <span
              class="c7n-pro-transfer-header-selected"
            >
              4项
            </span>
          </span>
        </label>
      </div>
      <div
        class="c7n-pro-transfer-body"
      >
        <div
          class="c7n-pro-transfer-content-wrapper"
        >
          <ul
            class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
            role="menu"
            tabindex="0"
          >
            <li
              aria-selected="false"
              class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Jack
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
            <li
              aria-selected="false"
              class="c7n-pro-transfer-content-item"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Lucy
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
            <li
              aria-selected="false"
              class="c7n-pro-transfer-content-item"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Niu
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
            <li
              aria-selected="false"
              class="c7n-pro-transfer-content-item"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Shao
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
    <div
      class="c7n-pro-transfer-operation"
    >
      <button
        class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_before"
        />
      </button>
      <button
        class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
        disabled=""
        type="button"
      >
        <i
          class="icon icon-navigate_next"
        />
      </button>
    </div>
    <div
      class="c7n-pro-transfer c7n-pro-transfer-with-header"
    >
      <div
        class="c7n-pro-transfer-header"
      >
        <label
          class="c7n-pro-checkbox-wrapper"
        >
          <input
            class="c7n-pro-checkbox"
            type="checkbox"
            value="true"
          />
          <i
            class="c7n-pro-checkbox-inner"
          />
          <span
            class="c7n-pro-checkbox-label"
          >
            <span
              class="c7n-pro-transfer-header-selected"
            >
              1项
            </span>
          </span>
        </label>
      </div>
      <div
        class="c7n-pro-transfer-body"
      >
        <div
          class="c7n-pro-transfer-content-wrapper"
        >
          <ul
            class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
            role="menu"
            tabindex="0"
          >
            <li
              aria-selected="false"
              class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
              role="menuitem"
            >
              <label
                class="c7n-checkbox-wrapper"
              >
                <span
                  class="c7n-checkbox"
                >
                  <input
                    class="c7n-checkbox-input"
                    tabindex="-1"
                    type="checkbox"
                  />
                  <span
                    class="c7n-checkbox-inner"
                  />
                </span>
              </label>
              Huazhen
              <div
                class="c7n-ripple-wrapper"
              />
            </li>
          </ul>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`renders ./components-pro/transfer/demo/lookupCode.md correctly 1`] = `
<div
  class="c7n-row"
  style="margin-left:-5px;margin-right:-5px"
>
  <div
    class="c7n-col-18"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-transfer-wrapper"
    >
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                无匹配结果。
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="c7n-pro-transfer-operation"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_before"
          />
        </button>
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_next"
          />
        </button>
      </div>
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                无匹配结果。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div
    class="c7n-col-6"
    style="padding-left:5px;padding-right:5px"
  >
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-default c7n-pro-btn-wrapper"
      type="button"
    >
      <span>
        修改lookupCode
      </span>
      <div
        class="c7n-ripple-wrapper"
      />
    </button>
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-transfer-wrapper"
    >
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                无匹配结果。
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="c7n-pro-transfer-operation"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_before"
          />
        </button>
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_next"
          />
        </button>
      </div>
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                无匹配结果。
              </li>
            </ul>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-transfer-wrapper"
    >
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                 
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="c7n-pro-transfer-operation"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_before"
          />
        </button>
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_next"
          />
        </button>
      </div>
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                 
              </li>
            </ul>
          </div>
        </div>
      </div>
    </span>
  </div>
  <div
    class="c7n-col-24"
    style="padding-left:5px;padding-right:5px"
  >
    <span
      class="c7n-pro-transfer-wrapper"
    >
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                 
              </li>
            </ul>
          </div>
        </div>
      </div>
      <div
        class="c7n-pro-transfer-operation"
      >
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_before"
          />
        </button>
        <button
          class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
          disabled=""
          type="button"
        >
          <i
            class="icon icon-navigate_next"
          />
        </button>
      </div>
      <div
        class="c7n-pro-transfer c7n-pro-transfer-with-header"
      >
        <div
          class="c7n-pro-transfer-header"
        >
          <label
            class="c7n-pro-checkbox-wrapper"
          >
            <input
              class="c7n-pro-checkbox"
              type="checkbox"
              value="true"
            />
            <i
              class="c7n-pro-checkbox-inner"
            />
            <span
              class="c7n-pro-checkbox-label"
            >
              <span
                class="c7n-pro-transfer-header-selected"
              >
                0项
              </span>
            </span>
          </label>
        </div>
        <div
          class="c7n-pro-transfer-body"
        >
          <div
            class="c7n-pro-transfer-content-wrapper"
          >
            <ul
              class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
              role="menu"
              tabindex="0"
            >
              <li
                aria-disabled="true"
                aria-selected="false"
                class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
                role="menuitem"
              >
                <label
                  class="c7n-checkbox-wrapper"
                >
                  <span
                    class="c7n-checkbox c7n-checkbox-disabled"
                  >
                    <input
                      class="c7n-checkbox-input"
                      disabled=""
                      tabindex="-1"
                      type="checkbox"
                    />
                    <span
                      class="c7n-checkbox-inner"
                    />
                  </span>
                </label>
                 
              </li>
            </ul>
          </div>
        </div>
      </div>
    </span>
  </div>
</div>
`;

exports[`renders ./components-pro/transfer/demo/searchable.md correctly 1`] = `
<span
  class="c7n-pro-transfer-wrapper"
>
  <div
    class="c7n-pro-transfer c7n-pro-transfer-with-header"
  >
    <div
      class="c7n-pro-transfer-header"
    >
      <label
        class="c7n-pro-checkbox-wrapper"
      >
        <input
          class="c7n-pro-checkbox"
          type="checkbox"
          value="true"
        />
        <i
          class="c7n-pro-checkbox-inner"
        />
        <span
          class="c7n-pro-checkbox-label"
        >
          <span
            class="c7n-pro-transfer-header-selected"
          >
            2项
          </span>
        </span>
      </label>
    </div>
    <div
      class="c7n-pro-transfer-body c7n-pro-transfer-body-with-search"
    >
      <div
        class="c7n-pro-transfer-body-search-wrapper"
      >
        <span
          class="c7n-pro-input-wrapper c7n-pro-input-empty c7n-pro-input-suffix-button"
        >
          <label>
            <input
              autocomplete="off"
              class="c7n-pro-input"
              type="text"
              value=""
            />
            <div
              class="c7n-pro-input-inner-button c7n-pro-input-clear-button"
            >
              <i
                class="icon icon-close"
              />
            </div>
            <div
              class="c7n-pro-input-suffix"
            >
              <i
                class="icon icon-search"
              />
            </div>
          </label>
        </span>
      </div>
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Jack
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Lucy
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c7n-pro-transfer-operation"
  >
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
      disabled=""
      type="button"
    >
      <i
        class="icon icon-navigate_before"
      />
    </button>
    <button
      class="c7n-pro-btn c7n-pro-btn-raised c7n-pro-btn-primary c7n-pro-btn-icon-only c7n-pro-btn-wrapper c7n-pro-btn-sm c7n-pro-btn-disabled"
      disabled=""
      type="button"
    >
      <i
        class="icon icon-navigate_next"
      />
    </button>
  </div>
  <div
    class="c7n-pro-transfer c7n-pro-transfer-with-header"
  >
    <div
      class="c7n-pro-transfer-header"
    >
      <label
        class="c7n-pro-checkbox-wrapper"
      >
        <input
          class="c7n-pro-checkbox"
          type="checkbox"
          value="true"
        />
        <i
          class="c7n-pro-checkbox-inner"
        />
        <span
          class="c7n-pro-checkbox-label"
        >
          <span
            class="c7n-pro-transfer-header-selected"
          >
            1项
          </span>
        </span>
      </label>
    </div>
    <div
      class="c7n-pro-transfer-body c7n-pro-transfer-body-with-search"
    >
      <div
        class="c7n-pro-transfer-body-search-wrapper"
      >
        <span
          class="c7n-pro-input-wrapper c7n-pro-input-empty c7n-pro-input-suffix-button"
        >
          <label>
            <input
              autocomplete="off"
              class="c7n-pro-input"
              type="text"
              value=""
            />
            <div
              class="c7n-pro-input-inner-button c7n-pro-input-clear-button"
            >
              <i
                class="icon icon-close"
              />
            </div>
            <div
              class="c7n-pro-input-suffix"
            >
              <i
                class="icon icon-search"
              />
            </div>
          </label>
        </span>
      </div>
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
            role="menuitem"
          >
            <label
              class="c7n-checkbox-wrapper"
            >
              <span
                class="c7n-checkbox"
              >
                <input
                  class="c7n-checkbox-input"
                  tabindex="-1"
                  type="checkbox"
                />
                <span
                  class="c7n-checkbox-inner"
                />
              </span>
            </label>
            Huazhen
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;

exports[`renders ./components-pro/transfer/demo/single.md correctly 1`] = `
<span
  class="c7n-pro-transfer-wrapper"
>
  <div
    class="c7n-pro-transfer"
  >
    <div
      class="c7n-pro-transfer-body"
    >
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
          tabindex="0"
        >
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-active"
            role="menuitem"
          >
            Jack
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item"
            role="menuitem"
          >
            Lucy
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="c7n-pro-transfer-content-item"
            role="menuitem"
          >
            Wu
            <div
              class="c7n-ripple-wrapper"
            />
          </li>
        </ul>
      </div>
    </div>
  </div>
  <div
    class="c7n-pro-transfer"
  >
    <div
      class="c7n-pro-transfer-body"
    >
      <div
        class="c7n-pro-transfer-content-wrapper"
      >
        <ul
          class="c7n-pro-transfer-content  c7n-pro-transfer-content-root c7n-pro-transfer-content-vertical"
          role="menu"
          tabindex="0"
        >
          <li
            aria-disabled="true"
            aria-selected="false"
            class="c7n-pro-transfer-content-item c7n-pro-transfer-content-item-disabled"
            role="menuitem"
          >
            无匹配结果。
          </li>
        </ul>
      </div>
    </div>
  </div>
</span>
`;
